mproved layout and button styles across multiple components for enhanced usability and design consistency. Introduced new CSS variables in content-display.scss for dynamic spacing and padding, ensuring better responsiveness, particularly for smaller screens. Added a secondary button with an outlined list icon in content-display.tsx to enhance functionality. Updated button.scss to include width: fit-content for better size flexibility and standardized attribute selectors with double quotes. Adjusted top-nav.scss to include a z-index for proper stacking context and ensured consistent string formatting throughout. These updates enhance responsiveness, maintainability, and alignment with the design system.

--- a/src/components/content-display/content-display.scss
+++ b/src/components/content-display/content-display.scss
@@ -5,6 +5,8 @@
   --sub-lists-flex-direction: row;
   --content-details-padding: var(--magentaa11y-spacing-size-24);
   --content-details-header-font: var(--magentaa11y-typeset-body-xxl-strong);
+  --intro-padding-bottom: var(--magentaa11y-spacing-size-32);
+  --intro-gap: var(--magentaa11y-line-height-16);
 
   --tab-width: fit-content;
 
@@ -20,9 +22,9 @@
   &__intro {
     display: flex;
     flex-direction: column;
-    gap: var(--magentaa11y-line-height-16);
+    gap: var(--intro-gap);
     text-align: center;
-    padding-bottom: var(--magentaa11y-spacing-size-32);
+    padding-bottom: var(--intro-padding-bottom);
     border-bottom: var(--magentaa11y-border-weight-size-1) solid
       var(--color-background-tertiary);
 
@@ -144,7 +146,8 @@
     --sub-lists-flex-direction: column;
     --content-details-padding: var(--magentaa11y-spacing-size-16);
     --tab-width: 100%;
-
+    --intro-padding-bottom: var(--magentaa11y-spacing-size-24);
+    --intro-gap: var(--magentaa11y-line-height-20);
     --nav-display-content-gap: var(--magentaa11y-spacing-size-16);
     --content-actions-flex-direction: column;
   }
