--- a/src/components/custom-components/buttons/button/button.scss
+++ b/src/components/custom-components/buttons/button/button.scss
@@ -24,6 +24,7 @@
   max-inline-size: var(--button-max-width);
   overflow: hidden;
   height: fit-content;
+  width: fit-content;
   cursor: var(--button--cursor);
 
   &.Magentaa11y-button--primary {
@@ -47,7 +48,7 @@
       --icon-color: var(--button-text-pressed);
     }
 
-    &[aria-disabled='true'] {
+    &[aria-disabled="true"] {
       --button--bg: var(--button-disabled);
       --button--text-color: var(--button-disabled-text);
       --icon-color: var(--button-disabled-text);
@@ -93,7 +94,7 @@
 
     padding: 10px 0;
 
-    &[data-size='small'] {
+    &[data-size="small"] {
       --button-min-height: var(--magentaa11y-spacing-size-48);
       --button-padding: 13px 0;
     }
@@ -124,7 +125,7 @@
     color: inherit;
   }
 
-  &[data-size='small'] {
+  &[data-size="small"] {
     --button-min-height: 36px;
     --button-padding: var(--magentaa11y-spacing-size-8)
       var(--magentaa11y-spacing-size-16);
